Better fix for side-nav overlap issue.

--- a/sgdfrontend/static/scss/modules/_side-nav.scss
+++ b/sgdfrontend/static/scss/modules/_side-nav.scss
@@ -15,6 +15,10 @@ http://smacss.com/book/type-module
 	box-shadow: 0 0 0 4px #F0F0F0;
 }
 
+#side-nav-sticky.fixed {
+	max-width: 180px;
+}
+
 #nav-title {
     padding-left: 10px;
     margin: 10px 0;
